Sat Feb  4 20:22:00 UTC 2006 / Arjen de Korte <arjen@de-korte.org>

 - drivers/genericups.c: check for invalid overrides for signals
   (don't accept output signal if an input is expected or vice-versa)

Fri Feb  3 20:41:00 UTC 2006 / Arjen de Korte <arjen@de-korte.org>

 - Update to upsdrvctl:
   * Use 'old' style names first, when looking for the pid of drivers
     and then the 'new' style names. This allows the new driver to
     stop old drivers too and thus upgrading to a new version is
     simplified.
   * Consolidate the code to walk trough the UPS tree. All commands
     use the same code until the actual command is performed on a
     single driver (easier to add new commands, since the UPS tree
     walking code is now shared).

Thu Feb  2 21:23:00 UTC 2006 / Arjen de Korte <arjen@de-korte.org>

 - upsdrvctl:
   * Added 'status' command
   * Drivers read the port from 'ups.conf' directly, so including the
     port has been unneccessary for quite a while already (removed now)

Wed Feb  1 10:32:30 UTC 2006 / Peter Selinger <selinger@users.sourceforge.net>

 - newhidups: fixed battery manufacturing date conversion for APC
   Back-UPS 500 and Back-UPS ES/CyberFort 500.

Tue Jan 31 21:34:00 UTC 2006 / Arjen de Korte <arjen@de-korte.org>

 - Safenet driver:
   * put all UPS commands in header file (for easy retrieval)
   * remove log errors when instant commands can't be handled
     (doesn't work reliably on at least one flavor of this UPS
     and wasn't very useful anyway)

Mon Jan 30 19:52:00 UTC 2006 / Arjen de Korte <arjen@de-korte.org>

 -  Fixes bug #302338 (genericups: custom configuration through ups.conf
    not working)

Sat Jan 28 14:38:58 UTC 2006 / Arjen de Korte <arjen@de-korte.org>

 - Fix bug with upsd declaring driver stale when the system resumes
   after suspend-to-disk
 - Improve readability of the code by removing non-functional call to
   subroutine update_time and moving decision whether or not a ping