@@ -1,3 +1,7 @@
+Sat Feb  4 21:22:00 UTC 2006 / Arjen de Korte <arjen@de-korte.org>
+
+ - drivers/upsdrvctl.c: minor changes (coding style)
+
 Sat Feb  4 20:22:00 UTC 2006 / Arjen de Korte <arjen@de-korte.org>
 
  - drivers/genericups.c: check for invalid overrides for signals
